--- a/evolution/css/default.css
+++ b/evolution/css/default.css
@@ -1,2 +1,20 @@
-﻿body {
+﻿body, html {
+    height:100%;
+    width:100%;
+    margin:0;
+    padding:0;
+}
+
+.startBtn {
+    position:absolute;
+    top:-40%;
+    left:45%;
+    width:10%;
+}
+    .startBtn_full {
+        transition:all 1s;
+        position:absolute;
+        top:40%;
+        left:45%;
+        width:10%;
 }
