--- a/evolution/css/default.css
+++ b/evolution/css/default.css
@@ -8,6 +8,10 @@
     font-family:'Comic Sans MS';
 }
 
+h1 {
+    margin:0;
+}
+
 input, button, div, span, p {
     font-family:'Comic Sans MS';
 }
@@ -41,7 +45,7 @@ input, button, div, span, p {
 .gameFrame {
     width: 98%;
     height: 98%;
-    background: #fff;
+    background: #112D5C;
     position: absolute;
     top: -100%;
     left: 1%;
@@ -51,14 +55,14 @@ input, button, div, span, p {
     transition: all 500ms;
     width: 98%;
     height: 98%;
-    background: #fff;
+    background:#112D5C;
     position: absolute;
     top: 1%;
     left: 1%;
 }
 
 .gameArena {
-    background:#fff;
+    background:#112D5C;
     position:absolute;
     width:100%;
     height:95%;
@@ -67,19 +71,54 @@ input, button, div, span, p {
 }
 
 .turnBtn {
+    transition:all 500ms;
     background: rgba(128, 128, 128, 1);
     border: none;
     position: absolute;
     width: 10%;
-    height: 5%;
-    padding: 1% 0;
+    line-height:50px;
+    font-size:1rem;
     left: 0;
     top: 0;
 }
 
     .turnBtn:hover {
-        background: rgba(28, 28, 28, 0.4);
+        background: rgba(128, 128, 128, 0.8);
     }
+
+.turnBtn_lit {
+    transition:all 500ms;
+    background: #8a8a0d;
+    box-shadow:0 0 10px #b7b78c inset;
+    border: none;
+    position: absolute;
+    width: 10%;
+    line-height:50px;
+    left: 0;
+    top: 0;
+}
+
+.header {
+    position:absolute;
+    top:0;
+    left:11%;
+    background: rgba(128, 128, 128, 1);
+    width:50%;
+    line-height:52px;
+    text-align:center;
+    font-size:1rem;
+}
+
+.slot {
+    position:absolute;
+    top:0;
+    left:62%;
+    background: rgba(128, 128, 128, 1);
+    width:17%;
+    line-height:52px;
+    text-align:center;
+
+}
 
 .clock {
     position: absolute;
@@ -87,9 +126,9 @@ input, button, div, span, p {
     background: rgba(128, 128, 128, 1);
     border: none;
     width: 20%;
-    height: 3%;
-    padding: 1% 0;
+    line-height:50px;
     right: 0;
+    font-size:1rem;
     top: 0;
 }
 
@@ -137,7 +176,7 @@ input, button, div, span, p {
     border: none;
     width: 200px;
     height: 200px;
-    left: 0;
+    left: 5px;
     bottom: 1%;
     z-index: 5;
 }
@@ -272,6 +311,7 @@ input, button, div, span, p {
     position:absolute;
     left:1%;
     top:90%;
+    opacity:1;
     width:10%;
     background:red;
     border-radius:8px;
@@ -283,7 +323,28 @@ input, button, div, span, p {
     left:55%;
     top:90%;
     width:10%;
+    opacity:1;
     background:red;
     border-radius:8px;
     text-align:center;
+}
+.chatBtn_sleep {
+    transition:all 1s;
+    position:absolute;
+    left:0%;
+    top:90%;
+    width:10%;
+    opacity:0.3;
+    background:transparent;
+    border-radius:8px;
+    text-align:center;
+}
+
+.cell {
+    border-radius: 2.5px;
+    position:fixed;
+    background:#fff;
+    width:5px;
+    height:5px;
+    box-shadow:0 0 5px #000;
 }
