--- a/evolution/css/default.css
+++ b/evolution/css/default.css
@@ -55,7 +55,8 @@ input, button, div, span, p {
     transition: all 500ms;
     width: 98%;
     height: 98%;
-    background:#112D5C;
+    background:#000;
+
     position: absolute;
     top: 1%;
     left: 1%;
@@ -63,16 +64,19 @@ input, button, div, span, p {
 
 .gameArena {
     background:#112D5C;
+    box-shadow: 0 0 20px #000;
     position:absolute;
     width:100%;
-    height:95%;
-    top:5%;
+    height:80%;
+    top:55px;
     left:0;
 }
 
 .turnBtn {
     transition:all 500ms;
-    background: rgba(128, 128, 128, 1);
+    color: rgba(78, 78, 78, 1);
+    text-shadow: 0 1px 0 rgba(228, 228, 228, 0.7);
+    box-shadow: 0 0 20px #000 inset;
     border: none;
     position: absolute;
     width: 10%;
@@ -80,16 +84,25 @@ input, button, div, span, p {
     font-size:1rem;
     left: 0;
     top: 0;
+    background-image: url('../images/assets/sheet.jpg');
+    background-position:center;
+    background-repeat:repeat;
+    background-size:auto;
 }
 
     .turnBtn:hover {
-        background: rgba(128, 128, 128, 0.8);
+        opacity:0.7;
     }
 
 .turnBtn_lit {
     transition:all 500ms;
-    background: #8a8a0d;
-    box-shadow:0 0 10px #b7b78c inset;
+    background-image: url('../images/assets/sheet.jpg');
+    background-position:center;
+    background-repeat:repeat;
+    background-size:auto;
+    color: rgba(78, 78, 78, 1);
+    text-shadow: 0 1px 0 rgba(228, 228, 228, 0.7);
+    box-shadow:0 0 50px #bebe13 inset;
     border: none;
     position: absolute;
     width: 10%;
@@ -99,22 +112,34 @@ input, button, div, span, p {
 }
 
 .header {
-    position:absolute;
-    top:0;
-    left:11%;
-    background: rgba(128, 128, 128, 1);
-    width:50%;
-    line-height:52px;
-    text-align:center;
-    font-size:1rem;
+    position: absolute;
+    top: 0;
+    left: 10.2%;
+    background-image: url('../images/assets/sheet.jpg');
+    background-position:left;
+    box-shadow: 0 0 20px #000 inset;
+    background-repeat:repeat;
+    background-size:auto;
+    width: 51.6%;
+    color: rgba(78, 78, 78, 1);
+    text-shadow: 0 1px 0 rgba(228, 228, 228, 0.7);
+    line-height: 52px;
+    text-align: center;
+    font-size: 1rem;
 }
 
 .slot {
     position:absolute;
+    background-image: url('../images/assets/sheet.jpg');
+    background-position:left;
+    background-repeat:repeat;
+    background-size:auto;
     top:0;
+    color: rgba(78, 78, 78, 1);
+    text-shadow: 0 1px 0 rgba(228, 228, 228, 0.7);
+    box-shadow: 0 0 20px #000 inset;
     left:62%;
-    background: rgba(128, 128, 128, 1);
-    width:17%;
+    width:17.7%;
     line-height:52px;
     text-align:center;
 
@@ -123,13 +148,20 @@ input, button, div, span, p {
 .clock {
     position: absolute;
     text-indent: 4%;
-    background: rgba(128, 128, 128, 1);
+    background-image: url('../images/assets/sheet.jpg');
+    background-position:left;
+    background-repeat:repeat;
+    background-size:auto;
+    color: rgba(78, 78, 78, 1);
+    text-shadow: 0 1px 0 rgba(228, 228, 228, 0.7);
+    box-shadow: 0 0 20px #000 inset;
     border: none;
     width: 20%;
     line-height:50px;
     right: 0;
     font-size:1rem;
     top: 0;
+    cursor:auto;
 }
 
 .menuTab {
@@ -147,7 +179,7 @@ input, button, div, span, p {
 }
 
     .menuTab:hover {
-        background: rgba(28, 28, 28, 0.4);
+        background: rgba(255, 255, 255, 0.8);
     }
 
 .menuTab_full {
@@ -297,12 +329,13 @@ input, button, div, span, p {
 .backMenuBtn {
     right:1%;
     bottom:82%;
-    color:#000;
+    color:rgba(177, 10, 9, 0.6);
+    text-shadow: 0 2px 0 #000;
     font-weight:800;
     font-size:2vh;
     position:absolute;
-    z-index:6;
-    line-height:1%;
+    z-index:7;
+    height:1%;
     width:1%;
 }
 
