made a function that sends cells to flying.

--- a/evolution/css/default.css
+++ b/evolution/css/default.css
@@ -381,3 +381,24 @@ input, button, div, span, p {
     height:5px;
     box-shadow:0 0 5px #000;
 }
+
+.matter {
+    transition:all 1s;
+    position:fixed;
+    border-radius: 2.5px;
+    background:#fff;
+    width:5px;
+    height:5px;
+    box-shadow:0 0 5px #000;
+
+}
+.matter_throw {
+    transition:all 1s;
+    position:fixed;
+    border-radius: 2.5px;
+    background:#fff;
+    width:5px;
+    height:5px;
+    box-shadow:0 0 5px #000;
+
+}
